--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -20,17 +20,34 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.google.firebase:firebase-core:16.0.3'
 
+    // OkHttp
+    implementation "com.squareup.okhttp3:logging-interceptor:3.11.0"
+
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.4.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
+//    implementation "pl.droidsonroids:jspoon:1.3.2"
+
+    // Store
+    implementation "com.nytimes.android:store-kotlin3:3.1.0"
+    implementation "com.nytimes.android:filesystem3:3.1.0"
+
+    // Unit tests
     testImplementation 'junit:junit:4.12'
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
