--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.google.firebase:firebase-core:16.0.3'
+    compile 'com.google.maps.android:android-maps-utils:0.5'
 
     // OkHttp
     implementation "com.squareup.okhttp3:logging-interceptor:3.11.0"
